--- a/program.html
+++ b/program.html
@@ -91,7 +91,7 @@
         <div class="tab">
           <button class="tablinks" onclick="openCity(event, 'Friday')">Friday</button>
           <button class="tablinks" onclick="openCity(event, 'Saturday')">Saturday</button>
-          <button class="tablinks" onclick="openCity(event, 'Pods')">Pod Assignments</button>
+          <!--<button class="tablinks" onclick="openCity(event, 'Pods')">Pod Assignments</button>-->
         </div>
 
         <div id="Friday" class="tabcontent">
@@ -152,6 +152,7 @@
           </table>
         </div>
 
+        <!--
         <div id="Pods" class="tabcontent">
           <h3>Coming soon</h3> <!--
           <table style="width:100%">
