--- a/speakers.html
+++ b/speakers.html
@@ -62,6 +62,8 @@
       </div>
     </nav>
 
+
+
     <!-- Page Header -->
     <header class="masthead" style="background-image: url('img/clearview.jpg')">
       <div class="overlay"></div>
@@ -78,18 +80,134 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <h2 class="section-heading text-uppercase"> Coming Soon!</h2>
-          <p></p>
-          <h2 class="section-heading text-uppercase"></h2>
-          <p></p>
-          <h2 class="section-heading text-uppercase"> </h2>
-          <p></p>
+
+
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Opening Speaker</h2>
+
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+
+
+
+            <h4 class="service-heading"></h4>
+            <p class="text-muted"></p>
+          </div>
+          <div class="col-md-4">
+
+            <img src="img/Bisconti (2).png" alt="sponsor" style="float; width:301px;height:330px;">
+
+            <h4 class="service-heading">Ben Bisconti</h4>
+
+          </div>
+          <div class="col-md-4">
+
+
+            <h4 class="service-heading"></h4>
+            <p class="text-muted"></p>
+          </div>
+        </div>
+        <p class="text-muted">Ben Bisconti is currently a senior advisor at Accel¬-KKR and was previously an active member of the Accel--KKR investment team for ten years. In his decades of experience, Ben has served as Managing Director of the Technology Group and Head of the Global Communications Equipment practice at Credit Suisse First Boston. He has extensive knowledge about public and private equity, convertible debt, equity derivatives and mergers and acquisitions. Ben has led over 150 transactions with an aggregate value more than $50 billion. After earning his A.B. degree from Harvard College, Ben received his MBA from the Anderson School at UCLA. Ben currently serves on the board of HighWire Press and has served in directorship positions at Applied Predictive Technologies, Endurance, iTradeNetwork, Datapipe, Saber, Alias, and Savista.</p>
+      </div>
+
+    </section>
+
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Panelists</h2>
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+
+              <img src="img/Anderson.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Chris Anderson</h4>
+            <p class="text-muted">Chris Anderson is a research analyst and portfolio manager with the Franklin Equity Group, focusing on equity research and analysis of companies in the business services (information services, consulting and for-profit education) and insurance industries. Mr. Anderson is a co-manager of the Franklin Focused Core Equity Fund and related portfolios. Prior to joining Franklin Templeton Investments in 2012, Mr. Anderson was an investment associate at Blum Capital Partners, an investment associate at Fox Paine & Company and an investment banking analyst at Goldman Sachs. Mr. Anderson holds a B.Sc in management science and engineering from Stanford University and an M.B.A. from the Haas School of Business at the University of California, Berkeley.</p>
+          </div>
+          <div class="col-md-4">
+
+            <img src="img/Akash.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Pradhan Akash</h4>
+            <p class="text-muted">Akash Pradhan works across TPG Capital and TPG Growth focusing on Technology, Media, and Telecommunications (TMT) investments, and is based in San Francisco. He previously worked in TPG Capital's TMT group from 2013-2015. Akash has been or is currently involved with TPG’s investments in Box, Zscaler, and GreenSky. Prior to joining TPG, he worked at merchant bank Raine in New York. Akash holds an MBA from Harvard Business School and a BS in Business Administration, Summa Cum Laude, from UC Berkeley. Akash formerly covered sports for Harbus, the independent non-profit news organization for the Harvard Business School.</p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/Kennedy.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Ronan Kennedy</h4>
+            <p class="text-muted">From serving as captain of the 101st Airborne Division to working as Vice President at Goldman Sachs, Ronan Kennedy has over a decade of experience in leadership positions in business, banking, and venture capital. Ronan currently works in venture capital at Microsoft Capital evaluating and investing in technologies that enable a mobile-first, cloud-first future spanning big data & analytics, business SaaS, cloud infrastructure, machine learning, productivity and security, among others. Ronan has an MBA from Haas Business School at the University of California: Berkeley and a BS in Engineering from the University of Washington.</p>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
+
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"></h2>
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+
+              <img src="img/Matthews.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Lance Matthews</h4>
+            <p class="text-muted">Lance Matthews is an Associate at Deutsche Telekom Capital Partners where he works on company sourcing, investment analysis and diligence, and portfolio management. He joined DTCP from Touchdown Ventures, a SF based Corporate Venture firm. Prior to that, he spent time at Illuminate Ventures, a seed stage Enterprise Saas firm based in Oakland and at Twitter holding a position in the finance department. Lance holds an MBA from UC Berkeley’s Haas School of Business, a Master’s degree in History from the University of Glasgow, Scotland, and graduated Summa Cum Laude from CSU Fresno.</p>
+          </div>
+          <div class="col-md-4">
+
+            <img src="img/Odhav.png" alt="sponsor" style="float; width:301px;height:328px;">
+
+            <h4 class="service-heading">Chirog Odhav</h4>
+            <p class="text-muted">Chirag Odhav is an Analyst working on the Portfolio Management team at White Oak Global Advisors. He previously worked at Bank of America Merrill Lynch in Equity Research covering the alternative energy and clean tech sector. Mr. Odhav received his B.A. from the University of California, Berkeley, and holds Series 7, 63, 86, and 87 FINRA Certifications. Chirag is also a Berkeley Investment Group alumnus and served as Fund Manager during the fall semester of his senior year at Cal.</p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/Paniker.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Vinod Paniker</h4>
+            <p class="text-muted">Vinod Paniker has over two decades of experience in multiple entrepreneurial and engineering ventures. He presently serves as Vice President of Digital Product Management at Prudential Financial in Mountain View, CA. He is also the Co-Founder and COO of Söoryen Technologies, a company that helps businesses integrate FinTech Solutions, eCommerce, Mobile App, and Website across platforms. Prior to Söoryen, Vinod was the Vice President of Engineering at Pricelock, where he focused on strategic execution of engineering projects and programs. Prior to joining Pricelock, he was the Director of Software Engineering and Project Management at E*TRADE FINANCIAL. In addition, Vinod is currently on the Board of Brookline College, NITE.org and a co-founder at 500BC.com</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"></h2>
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+
+              <img src="img/totten.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Jeff Totten</h4>
+            <p class="text-muted">Jeff Totten is currently the CEO of Evergreen Services Group and is responsible for driving Evergreen’s organic and inorganic growth by pairing world-class leadership teams with exceptional B2B services companies. Jeff splits his time between identifying new Evergreen investments, hiring leaders and supporting the growth of Evergreen companies. Prior to founding Evergreen, Jeff was a Vice President at Alpine Investors where he led investments in business services companies and was a board member of Risk Management Strategies, MidAmerica, YouCaring and Constructive Media. Jeff graduated Phi Beta Kappa with highest honors from the Haas School of Business at UC Berkeley where he was President of the Berkeley Investment Group.</p>
+          </div>
+
+    </section>
+
+
 
     <hr>
 
