Welcome to my crib

--- a/speakers.html
+++ b/speakers.html
@@ -199,7 +199,7 @@
         <div class="row text-center">
           <div class="col-md-4">
 
-              <img src="img/totten.png" alt="sponsor" style="float; width:301px;height:344px;">
+              <img src="img/Totten.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Jeff Totten</h4>
             <p class="text-muted">Jeff Totten is currently the CEO of Evergreen Services Group and is responsible for driving Evergreen’s organic and inorganic growth by pairing world-class leadership teams with exceptional B2B services companies. Jeff splits his time between identifying new Evergreen investments, hiring leaders and supporting the growth of Evergreen companies. Prior to founding Evergreen, Jeff was a Vice President at Alpine Investors where he led investments in business services companies and was a board member of Risk Management Strategies, MidAmerica, YouCaring and Constructive Media. Jeff graduated Phi Beta Kappa with highest honors from the Haas School of Business at UC Berkeley where he was President of the Berkeley Investment Group.</p>
