--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,8 @@
       </div>
     </nav>
 
+
+
     <!-- Page Header -->
     <header class="masthead" style="background-image: url('img/doe.jpg')">
       <div class="overlay"></div>
@@ -70,7 +72,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>Questions?</h1>
-              <span class="subheading">We have answers</span>
+              <span class="subheading">we have answers</span>
             </div>
           </div>
         </div>
@@ -78,52 +80,100 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch? Feel free to reach out to us at berkeleyinvestmentconference@gmail.com!</p>
-          <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-          <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-          <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! --> <!--
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Name</label>
-                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Email Address</label>
-                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Phone Number</label>
-                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Message</label>
-                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-            </div>
-          </form>
+
+
+    <section id="services">
+      <h2 class="section-heading text-uppercase text-center">Conference Directors</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-6">
+
+              <img src="img/SeanLee.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Sean Lee</h4>
+            <p class="text-muted">Bussiness Adminstation, History | 2020</p>
+          </div>
+
+          <div class="col-md-6">
+            <img src="img/AmyRan.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Amy Ran</h4>
+            <p class="text-muted">Bussiness Adminstation | 2019</p>
+          </div>
         </div>
       </div>
-    </div>
--->
+    </section>
+
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Conference Committee Staff</h2>
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+
+              <img src="img/AaronChow.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Aaron Chow</h4>
+            <p class="text-muted">Economics | 2021</p>
+          </div>
+          <div class="col-md-4">
+
+            <img src="img/PranavGarg.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Pranav Garg</h4>
+            <p class="text-muted">Economics | 2021</p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/EricLi.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Eric Li</h4>
+            <p class="text-muted">Computer Science, Data Science, Economics | 2021</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"></h2>
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+
+              <img src="img/ShivayParekh.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Shivay Parekh</h4>
+            <p class="text-muted">Economics | 2021</p>
+          </div>
+          <div class="col-md-4">
+
+              <img src="img/AnkurSingh.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Ankur Singh</h4>
+            <p class="text-muted">Economics | 2021</p>
+          </div>
+
+    </section>
+
+
+
     <hr>
 
     <!-- Footer -->
@@ -161,10 +211,6 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/clean-blog.min.js"></script>
