--- a/contact.html
+++ b/contact.html
@@ -98,14 +98,14 @@
               <img src="img/SeanLee.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Sean Lee</h4>
-            <p class="text-muted">Bussiness Adminstation, History | 2020</p>
+            <p class="text-muted">seanjaelee@berkeley.edu | Business Administration, Economics & History | 2020</p>
           </div>
 
           <div class="col-md-6">
             <img src="img/AmyRan.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Amy Ran</h4>
-            <p class="text-muted">Bussiness Adminstation | 2019</p>
+            <p class="text-muted">amyran@berkeley.edu | Business Administation | 2019</p>
           </div>
         </div>
       </div>
@@ -126,20 +126,20 @@
               <img src="img/AaronChow.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Aaron Chow</h4>
-            <p class="text-muted">Economics | 2021</p>
+            <p class="text-muted">aaronchow@berkeley.edu | Economics | 2021</p>
           </div>
           <div class="col-md-4">
 
             <img src="img/PranavGarg.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Pranav Garg</h4>
-            <p class="text-muted">Economics | 2021</p>
+            <p class="text-muted">pgarg@berkeley.edu | Economics | 2021</p>
           </div>
           <div class="col-md-4">
             <img src="img/EricLi.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Eric Li</h4>
-            <p class="text-muted">Computer Science, Data Science, Economics | 2021</p>
+            <p class="text-muted">ericli3088@berkeley.edu | Computer Science, Data Science & Economics | 2021</p>
           </div>
         </div>
       </div>
@@ -160,14 +160,21 @@
               <img src="img/ShivayParekh.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Shivay Parekh</h4>
-            <p class="text-muted">Economics | 2021</p>
+            <p class="text-muted">Shivay99@berkeley.edu | Economics | 2021</p>
+          </div>
+          <div class="col-md-4">
+
+              <img src="img/Jen.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Jen Shi</h4>
+            <p class="text-muted">zrshi@berkeley.edu | Economics & Statistics | 2019</p>
           </div>
           <div class="col-md-4">
 
               <img src="img/AnkurSingh.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Ankur Singh</h4>
-            <p class="text-muted">Economics | 2021</p>
+            <p class="text-muted">ankursingh@berkeley.edu | Economics | 2021</p>
           </div>
 
     </section>
