--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <img src="img/alpine.jpg" alt="sponsor" style="float; width:642px;height:50px;">
             <img src="img/citadel.jpg"alt="sponsor" style="float; width:326px;height:50px; padding-left: 15px;">
             <img src="img/prudential.png"alt="sponsor" style="float; width:326px;height:250px; padding-left: 15px;">
-            <img src="img/orbis.jpg"alt="sponsor" style="float; width:326px;height:100px; padding-left: 15px;">
+            <img src="img/orbis.png"alt="sponsor" style="float; width:250px;height:120px; padding-left: 15px;">
           </div>
         </div>
     </section>
