--- a/speakers.html
+++ b/speakers.html
@@ -143,12 +143,16 @@
             <h4 class="service-heading">Pradhan Akash</h4>
             <p class="text-muted">Akash Pradhan works across TPG Capital and TPG Growth focusing on Technology, Media, and Telecommunications (TMT) investments, and is based in San Francisco. He previously worked in TPG Capital's TMT group from 2013-2015. Akash has been or is currently involved with TPG’s investments in Box, Zscaler, and GreenSky. Prior to joining TPG, he worked at merchant bank Raine in New York. Akash holds an MBA from Harvard Business School and a BS in Business Administration, Summa Cum Laude, from UC Berkeley. Akash formerly covered sports for Harbus, the independent non-profit news organization for the Harvard Business School.</p>
           </div>
-          <div class="col-md-4">
-            <img src="img/Kennedy.png" alt="sponsor" style="float; width:301px;height:344px;">
 
-            <h4 class="service-heading">Ronan Kennedy</h4>
-            <p class="text-muted">From serving as captain of the 101st Airborne Division to working as Vice President at Goldman Sachs, Ronan Kennedy has over a decade of experience in leadership positions in business, banking, and venture capital. Ronan currently works in venture capital at Microsoft Capital evaluating and investing in technologies that enable a mobile-first, cloud-first future spanning big data & analytics, business SaaS, cloud infrastructure, machine learning, productivity and security, among others. Ronan has an MBA from Haas Business School at the University of California: Berkeley and a BS in Engineering from the University of Washington.</p>
+          <div class="col-md-4">
+
+              <img src="img/Alan.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Alan Chung</h4>
+            <p class="text-muted">Alan Chung joined Hahn Capital Management as a research analyst in 2014 after receiving his M.B.A. degree from The Wharton School, University of Pennsylvania. During business school, Alan interned at Causeway Capital Management researching public companies. Before attending business school, Alan was a Research Associate at Dodge & Cox for more than three years where he researched, selected, and monitored investments in public companies around the world. Alan also worked at FactSet Research Systems working with dozens of institutional investors in various capacities. Mr. Chung is a CFA charterholder and received his B.S. degree in Business Administration from the University of California, Berkeley. </p>
           </div>
+
+
         </div>
       </div>
     </section>
@@ -163,6 +167,14 @@
           </div>
         </div>
         <div class="row text-center">
+
+          <div class="col-md-4">
+            <img src="img/Kennedy.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Ronan Kennedy</h4>
+            <p class="text-muted">From serving as captain of the 101st Airborne Division to working as Vice President at Goldman Sachs, Ronan Kennedy has over a decade of experience in leadership positions in business, banking, and venture capital. Ronan currently works in venture capital at Microsoft Capital evaluating and investing in technologies that enable a mobile-first, cloud-first future spanning big data & analytics, business SaaS, cloud infrastructure, machine learning, productivity and security, among others. Ronan has an MBA from Haas Business School at the University of California: Berkeley and a BS in Engineering from the University of Washington.</p>
+          </div>
+
           <div class="col-md-4">
 
               <img src="img/Matthews.png" alt="sponsor" style="float; width:301px;height:344px;">
@@ -174,15 +186,10 @@
 
             <img src="img/Odhav.png" alt="sponsor" style="float; width:301px;height:328px;">
 
-            <h4 class="service-heading">Chirog Odhav</h4>
+            <h4 class="service-heading">Chirag Odhav</h4>
             <p class="text-muted">Chirag Odhav is an Analyst working on the Portfolio Management team at White Oak Global Advisors. He previously worked at Bank of America Merrill Lynch in Equity Research covering the alternative energy and clean tech sector. Mr. Odhav received his B.A. from the University of California, Berkeley, and holds Series 7, 63, 86, and 87 FINRA Certifications. Chirag is also a Berkeley Investment Group alumnus and served as Fund Manager during the fall semester of his senior year at Cal.</p>
           </div>
-          <div class="col-md-4">
-            <img src="img/Paniker.png" alt="sponsor" style="float; width:301px;height:344px;">
 
-            <h4 class="service-heading">Vinod Paniker</h4>
-            <p class="text-muted">Vinod Paniker has over two decades of experience in multiple entrepreneurial and engineering ventures. He presently serves as Vice President of Digital Product Management at Prudential Financial in Mountain View, CA. He is also the Co-Founder and COO of Söoryen Technologies, a company that helps businesses integrate FinTech Solutions, eCommerce, Mobile App, and Website across platforms. Prior to Söoryen, Vinod was the Vice President of Engineering at Pricelock, where he focused on strategic execution of engineering projects and programs. Prior to joining Pricelock, he was the Director of Software Engineering and Project Management at E*TRADE FINANCIAL. In addition, Vinod is currently on the Board of Brookline College, NITE.org and a co-founder at 500BC.com</p>
-          </div>
         </div>
       </div>
     </section>
@@ -197,6 +204,14 @@
           </div>
         </div>
         <div class="row text-center">
+
+          <div class="col-md-4">
+            <img src="img/Paniker.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Vinod Paniker</h4>
+            <p class="text-muted">Vinod Paniker has over two decades of experience in multiple entrepreneurial and engineering ventures. He presently serves as Vice President of Digital Product Management at Prudential Financial in Mountain View, CA. He is also the Co-Founder and COO of Söoryen Technologies, a company that helps businesses integrate FinTech Solutions, eCommerce, Mobile App, and Website across platforms. Prior to Söoryen, Vinod was the Vice President of Engineering at Pricelock, where he focused on strategic execution of engineering projects and programs. Prior to joining Pricelock, he was the Director of Software Engineering and Project Management at E*TRADE FINANCIAL. In addition, Vinod is currently on the Board of Brookline College, NITE.org and a co-founder at 500BC.com</p>
+          </div>
+
           <div class="col-md-4">
 
               <img src="img/Totten.png" alt="sponsor" style="float; width:301px;height:344px;">
@@ -204,6 +219,8 @@
             <h4 class="service-heading">Jeff Totten</h4>
             <p class="text-muted">Jeff Totten is currently the CEO of Evergreen Services Group and is responsible for driving Evergreen’s organic and inorganic growth by pairing world-class leadership teams with exceptional B2B services companies. Jeff splits his time between identifying new Evergreen investments, hiring leaders and supporting the growth of Evergreen companies. Prior to founding Evergreen, Jeff was a Vice President at Alpine Investors where he led investments in business services companies and was a board member of Risk Management Strategies, MidAmerica, YouCaring and Constructive Media. Jeff graduated Phi Beta Kappa with highest honors from the Haas School of Business at UC Berkeley where he was President of the Berkeley Investment Group.</p>
           </div>
+
+
 
     </section>
 
