--- a/program.html
+++ b/program.html
@@ -101,20 +101,20 @@
               <th>Time</th>
             </tr>
             <tr>
-              <td>Check-in</td>
-              <td>10am-10:30am</td>
+              <td>Check-in, Pictures, Sponsor Tabling</td>
+              <td>9:30am-11:00am</td>
             </tr>
             <tr>
-              <td>Opening Ceremony</td>
-              <td>10:30am-11:30am</td>
+              <td>Welcome Ceremony</td>
+              <td>11:00am-11:30am</td>
             </tr>
             <tr>
-              <td>Lunch</td>
-              <td>11:30am-1:30pm</td>
+              <td>Opening Keynote Speaker + Q&A</td>
+              <td>11:30am-12:30pm</td>
             </tr>
             <tr>
-              <td>Conference Logistics</td>
-              <td>1:30pm-2pm</td>
+              <td>Lunch & Social</td>
+              <td>12:30pm-2pm</td>
             </tr>
           </table>
         </div>
@@ -130,24 +130,28 @@
               <td>8:30am-9am</td>
             </tr>
             <tr>
-              <td>Speaker Panel & Logistics</td>
-              <td>9am-10am</td>
+              <td>Investment Panel</td>
+              <td>9am-9:30am</td>
             </tr>
             <tr>
-              <td>Preliminary Pitches</td>
-              <td>10:30am-2pm</td>
+              <td>Panel Q&A</td>
+              <td>9:30am-9:50am</td>
+            </tr>
+            <tr>
+              <td>Competitor Pod and Location Assignments</td>
+              <td>9:50am-10am</td>
+            </tr>
+            <tr>
+              <td>First Round Pitches (Locations TBA)</td>
+              <td>10:30am-1:30pm</td>
             </tr>
             <tr>
               <td>Final Pitches</td>
-              <td>2pm-3:30pm</td>
-            </tr>
-            <tr>
-              <td>Keynote</td>
-              <td>3:30pm-4:30pm</td>
+              <td>2pm-4pm</td>
             </tr>
             <tr>
               <td>Closing Ceremony & Awards</td>
-              <td>4:30pm-5pm</td>
+              <td>4:20pm-5pm</td>
             </tr>
           </table>
         </div>
