--- a/program.html
+++ b/program.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Berkeley Investment Cofnerence</title>
+    <title>Berkeley Investment Conference</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -78,12 +78,16 @@
     </header>
 
     <!-- Main Content -->
+
     <section id="services">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-left">
             <h2 class="section-heading text-uppercase">How It Works</h2>
-            <p>Coming soon</p>
+            <p>For the 1st round, contestants will have 5 minutes to prepare, 10 minutes to pitch, and 15 minutes for Q&A by judges. Teams are expected to deliver a full pitch to 3 judges. Questions can cover any variety of topics, including modeling assumptions, current events, and industry trends.
+            </p>
+            <p>
+            For the final round, contestants will have 15 minutes to pitch, and 15 minutes for Q&A by judges. Teams are expected to deliver a full pitch to 3 judges in addition to any conference particpants who wish to see final presentations. Questions can cover any topics as before.</p>
             <h2 class="section-heading text-uppercase">Schedule</h2>
           </div>
         </div>
@@ -91,6 +95,30 @@
         <div class="tab">
           <button class="tablinks" onclick="openCity(event, 'Friday')">Friday</button>
           <button class="tablinks" onclick="openCity(event, 'Saturday')">Saturday</button>
+          <!--
+          <table style="width:100%">
+            <tr>
+              <th>Event</th>
+              <th>Time</th>
+            </tr>
+            <tr>
+              <td>Check-in, Pictures, Sponsor Tabling</td>
+              <td>9:30am-11:00am</td>
+            </tr>
+            <tr>
+              <td>Welcome Ceremony</td>
+              <td>11:00am-11:30am</td>
+            </tr>
+            <tr>
+              <td>Opening Keynote Speaker + Q&A</td>
+              <td>11:30am-12:30pm</td>
+            </tr>
+            <tr>
+              <td>Lunch & Social</td>
+              <td>12:30pm-2pm</td>
+            </tr>
+          </table> -->
+
           <!--<button class="tablinks" onclick="openCity(event, 'Pods')">Pod Assignments</button>-->
         </div>
 
