--- a/outreach.html
+++ b/outreach.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Berkeley Investment Cofnerence</title>
+    <title>Berkeley Investment Conference</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
