iframe for schedule

--- a/program.html
+++ b/program.html
@@ -93,8 +93,73 @@
         </div>
 
         <div class="tab">
-          <button class="tablinks" onclick="openCity(event, 'Friday')">Friday</button>
-          <button class="tablinks" onclick="openCity(event, 'Saturday')">Saturday</button>
+          <!--<button class="tablinks" onclick="openCity(event, 'Friday')">Friday</button>
+          <button class="tablinks" onclick="openCity(event, 'Saturday')">Saturday</button>-->
+        <!--  <table style="width:100%">
+            <tr>
+              <th>Friday</th>
+              <th>Time</th>
+            </tr>
+            <tr>
+              <td>Check-in</td>
+              <td>9:30am-10:00am</td>
+            </tr>
+            <tr>
+              <td>Pictures, Sponsor Tabling</td>
+              <td>10:00am-11:00am</td>
+            </tr>
+            <tr>
+              <td>Welcome Ceremony</td>
+              <td>11:00am-11:30am</td>
+            </tr>
+            <tr>
+              <td>Opening Keynote Speaker + Q&A</td>
+              <td>11:30am-12:30pm</td>
+            </tr>
+            <tr>
+              <td>Lunch & Social</td>
+              <td>12:30pm-2pm</td>
+            </tr>
+
+
+          </table>
+        </div>
+
+          <div class="tab">
+          <table style="width:100%">
+            <tr>
+              <th>Saturday</th>
+              <th>Time</th>
+            </tr>
+            <tr>
+              <td>Check-in</td>
+              <td>8:30am-9am</td>
+            </tr>
+            <tr>
+              <td>Investment Panel</td>
+              <td>9am-9:30am</td>
+            </tr>
+            <tr>
+              <td>Panel Q&A</td>
+              <td>9:30am-9:50am</td>
+            </tr>
+            <tr>
+              <td>Competitor Pod and Location Assignments</td>
+              <td>9:50am-10am</td>
+            </tr>
+            <tr>
+              <td>First Round Pitches (Locations TBA)</td>
+              <td>10:30am-1:30pm</td>
+            </tr>
+            <tr>
+              <td>Final Pitches</td>
+              <td>2pm-4pm</td>
+            </tr>
+            <tr>
+              <td>Closing Ceremony & Awards</td>
+              <td>4:20pm-5pm</td>
+            </tr>
+          </table>
           <!--
           <table style="width:100%">
             <tr>
@@ -120,6 +185,8 @@
           </table> -->
 
           <!--<button class="tablinks" onclick="openCity(event, 'Pods')">Pod Assignments</button>-->
+
+        <iframe src="img/sched.pdf" style="width: 1100px;height: 1000px;border: none;"></iframe>
         </div>
 
         <div id="Friday" class="tabcontent">
@@ -145,6 +212,8 @@
               <td>12:30pm-2pm</td>
             </tr>
           </table>
+
+
         </div>
 
         <div id="Saturday" class="tabcontent">
