--- a/speakers.html
+++ b/speakers.html
@@ -209,7 +209,7 @@
             <img src="img/Paniker.png" alt="sponsor" style="float; width:301px;height:344px;">
 
             <h4 class="service-heading">Vinod Paniker</h4>
-            <p class="text-muted">Vinod Paniker has over two decades of experience in multiple entrepreneurial and engineering ventures. He presently serves as Vice President of Digital Product Management at Prudential Financial in Mountain View, CA. He is also the Co-Founder and COO of Söoryen Technologies, a company that helps businesses integrate FinTech Solutions, eCommerce, Mobile App, and Website across platforms. Prior to Söoryen, Vinod was the Vice President of Engineering at Pricelock, where he focused on strategic execution of engineering projects and programs. Prior to joining Pricelock, he was the Director of Software Engineering and Project Management at E*TRADE FINANCIAL. In addition, Vinod is currently on the Board of Brookline College, NITE.org and a co-founder at 500BC.com</p>
+            <p class="text-muted">Vinod Paniker has over two decades of experience in multiple entrepreneurial and engineering ventures. He presently serves as Vice President of Digital Product Management at Prudential Financial's Silicon Valley office. He is also the Co-Founder and COO of Söoryen Technologies, a company that helps businesses integrate FinTech Solutions, eCommerce, Mobile App, and Website across platforms. Prior to Söoryen, Vinod was the Vice President of Engineering at Pricelock, where he focused on strategic execution of engineering projects and programs. Prior to joining Pricelock, he was the Director of Software Engineering and Project Management at E*TRADE FINANCIAL. </p>
           </div>
 
           <div class="col-md-4">
