--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,35 @@
     </section>
 
     <section id="services">
+      <h2 class="section-heading text-uppercase text-center">Junior Conference Directors</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-6">
+
+              <img src="img/PranavGarg.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">PranavGarg</h4>
+            <p class="text-muted">pgarg@berkeley.edu | Economics | 2021</p>
+          </div>
+
+          <div class="col-md-6">
+            <img src="img/EricLi.png" alt="sponsor" style="float; width:301px;height:344px;">
+
+            <h4 class="service-heading">Eric Li</h4>
+            <p class="text-muted">ericli3088@berkeley.edu | Computer Science, Data Science & Economics | 2021</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -128,33 +157,7 @@
             <h4 class="service-heading">Aaron Chow</h4>
             <p class="text-muted">aaronchow@berkeley.edu | Economics | 2021</p>
           </div>
-          <div class="col-md-4">
 
-            <img src="img/PranavGarg.png" alt="sponsor" style="float; width:301px;height:344px;">
-
-            <h4 class="service-heading">Pranav Garg</h4>
-            <p class="text-muted">pgarg@berkeley.edu | Economics | 2021</p>
-          </div>
-          <div class="col-md-4">
-            <img src="img/EricLi.png" alt="sponsor" style="float; width:301px;height:344px;">
-
-            <h4 class="service-heading">Eric Li</h4>
-            <p class="text-muted">ericli3088@berkeley.edu | Computer Science, Data Science & Economics | 2021</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase"></h2>
-            <h3 class="section-subheading text-muted">
-          </h3>
-          </div>
-        </div>
-        <div class="row text-center">
           <div class="col-md-4">
 
               <img src="img/ShivayParekh.png" alt="sponsor" style="float; width:301px;height:344px;">
@@ -169,6 +172,22 @@
             <h4 class="service-heading">Jen Shi</h4>
             <p class="text-muted">zrshi@berkeley.edu | Economics & Statistics | 2019</p>
           </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"></h2>
+            <h3 class="section-subheading text-muted">
+          </h3>
+          </div>
+        </div>
+        <div class="row text-center">
+
           <div class="col-md-4">
 
               <img src="img/AnkurSingh.png" alt="sponsor" style="float; width:301px;height:344px;">
